# sleap-anipose

./: pyproject.toml  setup.cfg
sleap_anipose/: calibration.py
tests/: test_calibration.py
